--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -1,1 +1,3 @@
-<p>header works!</p>
+<header class="header">
+  <img src="../../../../assets/logo_santander.png" alt="Logo" width="164px" height="auto">
+</header>
