--- a/src/app/shared/layout/header/header.component.css
+++ b/src/app/shared/layout/header/header.component.css
@@ -3,4 +3,16 @@
   padding: 1rem 1.5rem;
 
   background-color: var(--primary-color);
+
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+  .header{
+    justify-content: center;
+
+  }
 }
