--- a/src/app/dashboard/stock-card/stock-card.component.html
+++ b/src/app/dashboard/stock-card/stock-card.component.html
@@ -1,1 +1,11 @@
-<p>stock-card works!</p>
+<div class="stock-card-container">
+  <div class="stock-info-container">
+    <h2>SANB11</h2>
+    <p>08/07/2019 17:58:29</p>
+  </div>
+
+  <div>
+    <span>R$ 38,98</span>
+    <span>+ 0,37%</span>
+  </div>
+</div>
