--- a/src/app/dashboard/dashboard-page/dashboard-page.component.html
+++ b/src/app/dashboard/dashboard-page/dashboard-page.component.html
@@ -1,3 +1,11 @@
 <div class="container">
   <app-stock-card></app-stock-card>
+  <app-stock-card></app-stock-card>
+  <app-stock-card></app-stock-card>
+  <app-stock-card></app-stock-card>
+  <app-stock-card></app-stock-card>
+  <app-stock-card></app-stock-card>
+  <app-stock-card></app-stock-card>
+  <app-stock-card></app-stock-card>
+  <app-stock-card></app-stock-card>
 </div>
