--- a/src/app/dashboard/stock-card/stock-card.component.css
+++ b/src/app/dashboard/stock-card/stock-card.component.css
@@ -3,6 +3,7 @@
   height: 13.8125rem;
   background-color: var(--secondary-color);
   padding: 1rem;
+  margin: 1rem;
   border-radius: 4px;
   border-left: solid var(--positive-variation-color) 4px;
 
@@ -17,4 +18,44 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+}
+
+.stock-info-container h2, p {
+  margin: 0;
+}
+
+.stock-info-container h2 {
+  color: var(--text-color)
+}
+
+.stock-info-container p {
+  font-weight: 500;
+  font-size: 0.875rem;
+  color: var(--text-color-light)
+}
+
+.stock-value-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  margin: auto;
+
+}
+
+.stock-value-container .value{
+  font-size: 3rem;
+  font-weight: 600;
+  color: var(--text-color);
+
+}
+
+.stock-value-container .variation{
+  background-color: var(--positive-variation-color);
+  color: var(--secondary-color);
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.25rem;
+  align-self: flex-end;
+  margin-top: 0.25rem;
+  font-size: 0.8125rem;
 }
