--- a/src/app/dashboard/stock-card/stock-card.component.html
+++ b/src/app/dashboard/stock-card/stock-card.component.html
@@ -4,8 +4,8 @@
     <p>08/07/2019 17:58:29</p>
   </div>
 
-  <div>
-    <span>R$ 38,98</span>
-    <span>+ 0,37%</span>
+  <div class="stock-value-container">
+    <span class="value">R$ 38,98</span>
+    <span class="variation">+ 0,37%</span>
   </div>
 </div>
