--- a/src/app/dashboard/stock-card/stock-card.component.css
+++ b/src/app/dashboard/stock-card/stock-card.component.css
@@ -4,8 +4,8 @@
   background-color: var(--secondary-color);
   padding: 1rem;
   margin: 1rem;
-  border-radius: 4px;
-  border-left: solid var(--positive-variation-color) 4px;
+  border-radius: 0.25rem;
+  border-left: solid var(--positive-variation-color) 0.25rem;
 
   display: flex;
   flex-direction: column;
